--- a/src/main/resources/templates/blocks/headerFooter/footer.html
+++ b/src/main/resources/templates/blocks/headerFooter/footer.html
@@ -15,7 +15,7 @@
 
     <ul class="nav col-md-4 justify-content-end">
       <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">Home</a></li>
-      <li class="nav-item"><a href="/admin" class="nav-link px-2 text-muted">Admin</a></li>
+      <li class="nav-item"><a href="/admin/" class="nav-link px-2 text-muted">Admin</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
       <li class="nav-item"><a href="/home/about" class="nav-link px-2 text-muted">About</a></li>
